--- a/crates/brk/Cargo.toml
+++ b/crates/brk/Cargo.toml
@@ -18,6 +18,7 @@ full = [
     "parser",
     "query",
     "server",
+    "state",
     "store",
     "vec",
 ]
@@ -30,6 +31,7 @@ logger = ["brk_logger"]
 parser = ["brk_parser"]
 query = ["brk_query"]
 server = ["brk_server"]
+state = ["brk_state"]
 store = ["brk_store"]
 vec = ["brk_vec"]
 
@@ -44,6 +46,7 @@ brk_logger = { workspace = true, optional = true }
 brk_parser = { workspace = true, optional = true }
 brk_query = { workspace = true, optional = true }
 brk_server = { workspace = true, optional = true }
+brk_state = { workspace = true, optional = true }
 brk_store = { workspace = true, optional = true }
 brk_vec = { workspace = true, optional = true }
 
