--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ panic = "abort"
 inherits = "release"
 
 [workspace.dependencies]
+arc-swap = "1.7.1"
 axum = "0.8.4"
 bitcoin = { version = "0.32.6", features = ["serde"] }
 bitcoincore-rpc = "0.19.0"
