--- a/crates/brk_state/Cargo.toml
+++ b/crates/brk_state/Cargo.toml
@@ -8,10 +8,11 @@ repository.workspace = true
 
 [dependencies]
 brk_core = { workspace = true }
-brk_vec = { workspace = true }
 brk_store = { workspace = true }
 fjall = { workspace = true }
-rayon = { workspace = true }
 serde = { workspace = true }
 zerocopy = { workspace = true }
 zerocopy-derive = { workspace = true }
+
+[package.metadata.cargo-machete]
+ignored = ["zerocopy"]
