--- a/crates/brk_vec/Cargo.toml
+++ b/crates/brk_vec/Cargo.toml
@@ -9,7 +9,7 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
-arc-swap = "1.7.1"
+arc-swap = { workspace = true }
 brk_core = { workspace = true }
 brk_exit = { workspace = true }
 clap = { workspace = true }
@@ -22,3 +22,6 @@ serde_json = { workspace = true }
 zerocopy = { workspace = true }
 zerocopy-derive = { workspace = true }
 zstd = "0.13.3"
+
+[package.metadata.cargo-machete]
+ignored = ["clap"]
