--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ inherits = "release"
 [workspace.dependencies]
 arc-swap = "1.7.1"
 axum = "0.8.4"
+bincode = { version = "2.0.1", features = ["serde"] }
 bitcoin = { version = "0.32.6", features = ["serde"] }
 bitcoincore-rpc = "0.19.0"
 brk_cli = { version = "0", path = "crates/brk_cli" }
@@ -45,6 +46,7 @@ log = { version = "0.4.27" }
 minreq = { version = "2.13.4", features = ["https", "serde_json"] }
 rayon = "1.10.0"
 serde = { version = "1.0.219" }
+serde_bytes = "0.11.17"
 serde_derive = "1.0.219"
 serde_json = { version = "1.0.140", features = ["float_roundtrip"] }
 tabled = "0.20.0"
