--- a/crates/brk_state/Cargo.toml
+++ b/crates/brk_state/Cargo.toml
@@ -8,8 +8,10 @@ homepage.workspace = true
 repository.workspace = true
 
 [dependencies]
+bincode = { workspace = true }
 brk_core = { workspace = true }
 brk_store = { workspace = true }
+derive_deref = { workspace = true }
 fjall = { workspace = true }
 serde = { workspace = true }
 zerocopy = { workspace = true }
