--- a/websites/default/tsconfig.json
+++ b/websites/default/tsconfig.json
@@ -5,7 +5,8 @@
     "target": "ESNext",
     "module": "ESNext",
     "outDir": "/tmp/brk",
-    "lib": ["DOM", "DOM.Iterable", "ESNext", "WebWorker"]
+    "lib": ["DOM", "DOM.Iterable", "ESNext", "WebWorker"],
+    "skipLibCheck": true
   },
   "exclude": ["assets", "packages", "ignore"]
 }
