--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ axum = "0.8.4"
 bincode = { version = "2.0.1", features = ["serde"] }
 bitcoin = { version = "0.32.6", features = ["serde"] }
 bitcoincore-rpc = "0.19.0"
+brk_bundler = { version = "0.0.56", path = "crates/brk_bundler" }
 brk_cli = { version = "0.0.56", path = "crates/brk_cli" }
 brk_computer = { version = "0.0.56", path = "crates/brk_computer" }
 brk_core = { version = "0.0.56", path = "crates/brk_core" }
