server: mcp + global: refactor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ brk_fetcher = { version = "0.0.66", path = "crates/brk_fetcher" }
 brk_indexer = { version = "0.0.66", path = "crates/brk_indexer" }
 brk_logger = { version = "0.0.66", path = "crates/brk_logger" }
 brk_parser = { version = "0.0.66", path = "crates/brk_parser" }
-brk_query = { version = "0.0.66", path = "crates/brk_query" }
+brk_interface = { version = "0.0.66", path = "crates/brk_interface" }
 brk_server = { version = "0.0.66", path = "crates/brk_server" }
 brk_state = { version = "0.0.66", path = "crates/brk_state" }
 brk_store = { version = "0.0.66", path = "crates/brk_store" }
@@ -46,14 +46,18 @@ jiff = "0.2.15"
 log = { version = "0.4.27" }
 minreq = { version = "2.13.4", features = ["https", "serde_json"] }
 rayon = "1.10.0"
+rmcp = { path = "../rust-sdk/crates/rmcp", features = ["transport-streamable-http-server", "transport-worker"] }
+schemars = "0.9.0"
+# rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" , features = ["transport-streamable-http-server", "transport-worker"] }
+# schemars = "0.8.0"
 serde = { version = "1.0.219" }
 serde_bytes = "0.11.17"
 serde_derive = "1.0.219"
 serde_json = { version = "1.0.140", features = ["float_roundtrip"] }
 tabled = "0.20.0"
 tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
-zerocopy = { version = "0.8.25" }
-zerocopy-derive = "0.8.25"
+zerocopy = { version = "0.8.26" }
+zerocopy-derive = "0.8.26"
 
 [workspace.metadata.release]
 shared-version = true
