--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,9 +29,10 @@ brk_core = { version = "0.0.66", path = "crates/brk_core" }
 brk_exit = { version = "0.0.66", path = "crates/brk_exit" }
 brk_fetcher = { version = "0.0.66", path = "crates/brk_fetcher" }
 brk_indexer = { version = "0.0.66", path = "crates/brk_indexer" }
+brk_interface = { version = "0.0.66", path = "crates/brk_interface" }
 brk_logger = { version = "0.0.66", path = "crates/brk_logger" }
 brk_parser = { version = "0.0.66", path = "crates/brk_parser" }
-brk_interface = { version = "0.0.66", path = "crates/brk_interface" }
+brk_rmcp = { version = "0.1.6", features = ["transport-streamable-http-server", "transport-worker"]}
 brk_server = { version = "0.0.66", path = "crates/brk_server" }
 brk_state = { version = "0.0.66", path = "crates/brk_state" }
 brk_store = { version = "0.0.66", path = "crates/brk_store" }
@@ -46,10 +47,7 @@ jiff = "0.2.15"
 log = { version = "0.4.27" }
 minreq = { version = "2.13.4", features = ["https", "serde_json"] }
 rayon = "1.10.0"
-rmcp = { path = "../rust-sdk/crates/rmcp", features = ["transport-streamable-http-server", "transport-worker"] }
-schemars = "0.9.0"
-# rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" , features = ["transport-streamable-http-server", "transport-worker"] }
-# schemars = "0.8.0"
+schemars = "1.0.0-rc.2"
 serde = { version = "1.0.219" }
 serde_bytes = "0.11.17"
 serde_derive = "1.0.219"
