mcp: small changes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,8 @@ brk_interface = { version = "0.0.70", path = "crates/brk_interface" }
 brk_logger = { version = "0.0.70", path = "crates/brk_logger" }
 brk_mcp = { version = "0.0.70", path = "crates/brk_mcp" }
 brk_parser = { version = "0.0.70", path = "crates/brk_parser" }
-brk_rmcp = { version = "0.1.7", features = ["transport-streamable-http-server", "transport-worker"]}
+brk_rmcp = { version = "0.1.8", features = ["transport-streamable-http-server", "transport-worker"]}
+# brk_rmcp = { path = "../rust-sdk/crates/rmcp", features = ["transport-streamable-http-server", "transport-worker"]}
 brk_server = { version = "0.0.70", path = "crates/brk_server" }
 brk_state = { version = "0.0.70", path = "crates/brk_state" }
 brk_store = { version = "0.0.70", path = "crates/brk_store" }
@@ -48,7 +49,7 @@ jiff = "0.2.15"
 log = { version = "0.4.27" }
 minreq = { version = "2.13.4", features = ["https", "serde_json"] }
 rayon = "1.10.0"
-schemars = "1.0.0"
+schemars = "1.0.1"
 serde = { version = "1.0.219" }
 serde_bytes = "0.11.17"
 serde_derive = "1.0.219"
