computer: store part 8

--- a/crates/brk_store/Cargo.toml
+++ b/crates/brk_store/Cargo.toml
@@ -13,3 +13,4 @@ repository.workspace = true
 brk_core = { workspace = true }
 byteview = { workspace = true }
 fjall = { workspace = true }
+log = { workspace = true }
