--- a/crates/brk_bundler/Cargo.toml
+++ b/crates/brk_bundler/Cargo.toml
@@ -9,7 +9,8 @@ repository.workspace = true
 
 [dependencies]
 log = { workspace = true }
-notify = "8.0.0"
-brk_rolldown = "0.0.1"
+notify = "8.1.0"
+brk_rolldown = "0.1.0"
+# brk_rolldown = { path = "../../../rolldown/crates/rolldown"}
 sugar_path = "1.2.0"
 tokio = { workspace = true }
