--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -21,6 +21,7 @@ brk_store = { workspace = true }
 brk_vec = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
+either = "1.15.0"
 fjall = { workspace = true }
 jiff = { workspace = true }
 log = { workspace = true }
