--- a/crates/brk_mcp/Cargo.toml
+++ b/crates/brk_mcp/Cargo.toml
@@ -11,4 +11,4 @@ repository.workspace = true
 axum = { workspace = true }
 brk_interface = { workspace = true }
 log = { workspace = true }
-brk_rmcp = { workspace = true }
+rmcp = { workspace = true }
