--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -21,8 +21,8 @@ brk_store = { workspace = true }
 brk_vec = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
-either = "1.15.0"
 fjall = { workspace = true }
+libc = "0.2.174"
 log = { workspace = true }
 rayon = { workspace = true }
 serde = { workspace = true }
