--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,15 +48,19 @@ color-eyre = "0.6.5"
 derive_deref = "1.1.1"
 fjall = "2.11.1"
 jiff = "0.2.15"
+libc = "0.2.174"
 log = { version = "0.4.27" }
 minreq = { version = "2.14.0", features = ["https", "serde_json"] }
 rayon = "1.10.0"
-rmcp = { version = "0.3.0", features = ["transport-worker", "transport-streamable-http-server" ] }
+rmcp = { version = "0.3.0", features = [
+    "transport-worker",
+    "transport-streamable-http-server",
+] }
 schemars = "1.0.4"
 serde = { version = "1.0.219" }
 serde_bytes = "0.11.17"
 serde_derive = "1.0.219"
-serde_json = { version = "1.0.140", features = ["float_roundtrip"] }
+serde_json = { version = "1.0.141", features = ["float_roundtrip"] }
 tabled = "0.20.0"
 tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
 zerocopy = { version = "0.8.26" }
