--- a/crates/brk_indexer/Cargo.toml
+++ b/crates/brk_indexer/Cargo.toml
@@ -18,5 +18,6 @@ brk_store = { workspace = true }
 brk_vec = { workspace = true }
 color-eyre = { workspace = true }
 fjall = { workspace = true }
+libc = { workspace = true }
 log = { workspace = true }
 rayon = { workspace = true }
