--- a/crates/brk_vecs/Cargo.toml
+++ b/crates/brk_vecs/Cargo.toml
@@ -18,6 +18,8 @@ log = { workspace = true }
 memmap2 = "0.9.7"
 parking_lot = {workspace = true}
 rayon = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
 zerocopy = { workspace = true }
 zerocopy-derive = { workspace = true }
 zstd = "0.13.3"
