--- a/crates/brk_indexer/Cargo.toml
+++ b/crates/brk_indexer/Cargo.toml
@@ -15,7 +15,7 @@ brk_exit = { workspace = true }
 brk_logger = { workspace = true }
 brk_parser = { workspace = true }
 brk_store = { workspace = true }
-brk_vec = { workspace = true }
+brk_vecs = { workspace = true }
 color-eyre = { workspace = true }
 fjall = { workspace = true }
 libc = { workspace = true }
