--- a/crates/brk_interface/Cargo.toml
+++ b/crates/brk_interface/Cargo.toml
@@ -11,7 +11,7 @@ repository.workspace = true
 brk_core = { workspace = true }
 brk_computer = { workspace = true }
 brk_indexer = { workspace = true }
-brk_vec = { workspace = true }
+brk_vecs = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
 rmcp = { workspace = true }
