--- a/crates/brk_server/Cargo.toml
+++ b/crates/brk_server/Cargo.toml
@@ -20,7 +20,7 @@ brk_interface = { workspace = true }
 brk_logger = { workspace = true }
 brk_mcp = { workspace = true }
 brk_parser = { workspace = true }
-brk_vec = { workspace = true }
+brk_vecs = { workspace = true }
 clap = { workspace = true }
 clap_derive = { workspace = true }
 color-eyre = { workspace = true }
