--- a/crates/brk/Cargo.toml
+++ b/crates/brk/Cargo.toml
@@ -22,7 +22,7 @@ full = [
     "interface",
     "server",
     "store",
-    "vec",
+    "vecs",
 ]
 bundler = ["brk_bundler"]
 core = ["brk_core"]
@@ -36,7 +36,7 @@ parser = ["brk_parser"]
 interface = ["brk_interface"]
 server = ["brk_server"]
 store = ["brk_store"]
-vec = ["brk_vec"]
+vecs = ["brk_vecs"]
 
 [dependencies]
 brk_bundler = { workspace = true, optional = true }
@@ -52,7 +52,7 @@ brk_parser = { workspace = true, optional = true }
 brk_interface = { workspace = true, optional = true }
 brk_server = { workspace = true, optional = true }
 brk_store = { workspace = true, optional = true }
-brk_vec = { workspace = true, optional = true }
+brk_vecs = { workspace = true, optional = true }
 
 [package.metadata.docs.rs]
 all-features = true
