--- a/crates/brk_mcp/Cargo.toml
+++ b/crates/brk_mcp/Cargo.toml
@@ -11,4 +11,7 @@ repository.workspace = true
 axum = { workspace = true }
 brk_interface = { workspace = true }
 log = { workspace = true }
-rmcp = { workspace = true }
+brk_rmcp = { version = "0.3.0", features = [
+    "transport-worker",
+    "transport-streamable-http-server",
+] }
