--- a/crates/brk_interface/Cargo.toml
+++ b/crates/brk_interface/Cargo.toml
@@ -14,9 +14,8 @@ brk_indexer = { workspace = true }
 brk_vecs = { workspace = true }
 color-eyre = { workspace = true }
 derive_deref = { workspace = true }
-rmcp = { workspace = true }
-schemars = { workspace = true }
+schemars = "1.0.4"
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = "3.14.0"
-tabled = { workspace = true }
+tabled = "0.20.0"
