--- a/crates/brk_cli/Cargo.toml
+++ b/crates/brk_cli/Cargo.toml
@@ -9,20 +9,24 @@ repository.workspace = true
 
 [dependencies]
 bitcoincore-rpc = { workspace = true }
+brk_bundler = { workspace = true }
 brk_computer = { workspace = true }
 brk_fetcher = { workspace = true }
 brk_indexer = { workspace = true }
+brk_interface = { workspace = true }
 brk_logger = { workspace = true }
 brk_parser = { workspace = true }
 brk_server = { workspace = true }
 brk_vecs = { workspace = true }
-clap = { workspace = true }
-clap_derive = { workspace = true }
+clap = { version = "4.5.42", features = ["string"] }
+clap_derive = "4.5.41"
 color-eyre = "0.6.5"
 log = { workspace = true }
+minreq = { workspace = true }
 serde = { workspace = true }
 tokio = { workspace = true }
 toml = "0.9.4"
+zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
 
 [[bin]]
 name = "brk"
