--- a/crates/brk_cli/Cargo.toml
+++ b/crates/brk_cli/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "brk_cli"
-description = "A command line interface to run a Bitcoin Research Kit instance"
+description = "A command line interface to run a BRK instance"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
+build = "../../build.rs"
 
 [dependencies]
 bitcoincore-rpc = { workspace = true }
@@ -25,7 +26,7 @@ log = { workspace = true }
 minreq = { workspace = true }
 serde = { workspace = true }
 tokio = { workspace = true }
-toml = "0.9.4"
+toml = "0.9.5"
 zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
 
 [[bin]]
