--- a/crates/brk_error/Cargo.toml
+++ b/crates/brk_error/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "brk_error"
-description = "Errors used throughout the Bitcoin Research Kit"
+description = "Errors used throughout BRK"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
+build = "../../build.rs"
 
 [dependencies]
 brk_vecs = { workspace = true }
