--- a/crates/brk_logger/Cargo.toml
+++ b/crates/brk_logger/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "brk_logger"
-description = "A clean logger used in the Bitcoin Research Kit"
+description = "A thin wrapper around env_logger"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
+build = "../../build.rs"
 
 [dependencies]
 env_logger = "0.11.8"
