--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -6,7 +6,7 @@ edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
-build = "../../build.rs"
+build = "build.rs"
 
 [dependencies]
 bitcoin = { workspace = true }
