--- a/crates/brk_interface/Cargo.toml
+++ b/crates/brk_interface/Cargo.toml
@@ -6,7 +6,7 @@ edition.workspace = true
 version.workspace = true
 homepage.workspace = true
 repository.workspace = true
-build = "../../build.rs"
+build = "build.rs"
 
 [dependencies]
 brk_computer = { workspace = true }
