--- a/crates/brk_vecs/Cargo.toml
+++ b/crates/brk_vecs/Cargo.toml
@@ -8,7 +8,7 @@ edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
-build = "../../build.rs"
+build = "build.rs"
 
 [dependencies]
 brk_vecs_macros = { workspace = true }
