--- a/crates/brk_interface/Cargo.toml
+++ b/crates/brk_interface/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 version.workspace = true
 homepage.workspace = true
 repository.workspace = true
+rust-version.workspace = true
 build = "build.rs"
 
 [dependencies]
