--- a/crates/brk/Cargo.toml
+++ b/crates/brk/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 repository.workspace = true
 edition.workspace = true
 version.workspace = true
+rust-version.workspace = true
 build = "build.rs"
 
 [features]
