--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ tag-message = "release: v{{version}}"
 [workspace.metadata.dist]
 cargo-dist-version = "0.29.0"
 ci = "github"
+allow-dirty = ["ci"]
 installers = []
 targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-unknown-linux-gnu"]
 rust-toolchain-version = "1.89"
