--- a/websites/default/packages/.gitignore
+++ b/websites/default/packages/.gitignore
@@ -1,7 +1,7 @@
 LICENSE
 *.json
 *webcomponent*
-README.md
+README*.md
 cli*
 extras/
 *.cjs
@@ -9,3 +9,7 @@ dev.js
 *.development*
 *.iife.*
 nano.*
+worker.*
+*.ts
+*.mts
+*.cts
