--- a/crates/brk_interface/Cargo.toml
+++ b/crates/brk_interface/Cargo.toml
@@ -21,3 +21,4 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = "3.14.0"
 tabled = "0.20.0"
+nucleo-matcher = "0.3.1"
