--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ jiff = "0.2.15"
 log = "0.4.28"
 minreq = { version = "2.14.1", features = ["https", "serde_json"] }
 parking_lot = "0.12.4"
+quick_cache = "0.6.16"
 rayon = "1.11.0"
 serde = "1.0.219"
 serde_bytes = "0.11.17"
