--- a/crates/brk_computer/Cargo.toml
+++ b/crates/brk_computer/Cargo.toml
@@ -21,6 +21,7 @@ brk_parser = { workspace = true }
 vecdb = { workspace = true }
 derive_deref = { workspace = true }
 log = { workspace = true }
+num_enum = "0.7.4"
 pco = "0.4.6"
 rayon = { workspace = true }
 serde = { workspace = true }
