--- a/crates/brk_interface/Cargo.toml
+++ b/crates/brk_interface/Cargo.toml
@@ -16,6 +16,7 @@ brk_indexer = { workspace = true }
 brk_structs = { workspace = true }
 vecdb = { workspace = true }
 derive_deref = { workspace = true }
+quick_cache = { workspace = true }
 schemars = "1.0.4"
 serde = { workspace = true }
 serde_json = { workspace = true }
