--- a/crates/brk_store/Cargo.toml
+++ b/crates/brk_store/Cargo.toml
@@ -17,3 +17,4 @@ brk_structs = { workspace = true }
 byteview = { workspace = true }
 fjall = { workspace = true }
 log = { workspace = true }
+parking_lot = { workspace = true }
