--- a/crates/brk_error/Cargo.toml
+++ b/crates/brk_error/Cargo.toml
@@ -10,10 +10,11 @@ rust-version.workspace = true
 build = "build.rs"
 
 [dependencies]
-vecdb = { workspace = true }
+bitcoin = { workspace = true }
 bitcoincore-rpc = { workspace = true }
 fjall = { workspace = true }
 jiff = { workspace = true }
 minreq = { workspace = true }
 serde_json = { workspace = true }
+vecdb = { workspace = true }
 zerocopy = { workspace = true }
