--- a/crates/brk_parser/Cargo.toml
+++ b/crates/brk_parser/Cargo.toml
@@ -14,6 +14,7 @@ build = "build.rs"
 [dependencies]
 bitcoin = { workspace = true }
 bitcoincore-rpc = { workspace = true }
+brk_error = { workspace = true }
 brk_structs = { workspace = true }
 crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
 derive_deref = { workspace = true }
