--- a/crates/brk_cli/Cargo.toml
+++ b/crates/brk_cli/Cargo.toml
@@ -20,14 +20,13 @@ brk_logger = { workspace = true }
 brk_parser = { workspace = true }
 brk_server = { workspace = true }
 vecdb = { workspace = true }
-clap = { version = "4.5.47", features = ["string"] }
-clap_derive = "4.5.47"
+clap = { version = "4.5.47", features = ["derive", "string"] }
 color-eyre = "0.6.5"
 log = { workspace = true }
 minreq = { workspace = true }
 serde = { workspace = true }
 tokio = { workspace = true }
-toml = "0.9.6"
+toml = "0.9.7"
 zip = { version = "5.1.1", default-features = false, features = ["deflate"] }
 
 [[bin]]
